--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/new.loader.js";
+      var loaderUrl = buildUrl + "/testpagenewest.loader.js";
       var config = {
-        dataUrl: buildUrl + "/new.data.gz",
-        frameworkUrl: buildUrl + "/new.framework.js.gz",
-        codeUrl: buildUrl + "/new.wasm.gz",
+        dataUrl: buildUrl + "/testpagenewest.data",
+        frameworkUrl: buildUrl + "/testpagenewest.framework.js",
+        codeUrl: buildUrl + "/testpagenewest.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Home Page",
