--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity Terminal</title>
+    <title>Unity WebGL Player | terminal</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Terminal-Release-1.loader.js";
+      var loaderUrl = buildUrl + "/Terminal-Release-2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Terminal-Release-1.data",
-        frameworkUrl: buildUrl + "/Terminal-Release-1.framework.js",
-        codeUrl: buildUrl + "/Terminal-Release-1.wasm",
+        dataUrl: buildUrl + "/Terminal-Release-2.data",
+        frameworkUrl: buildUrl + "/Terminal-Release-2.framework.js",
+        codeUrl: buildUrl + "/Terminal-Release-2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "terminal",
