--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Home Page</title>
+    <title>Unity WebGL Player | terminal</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Home Page</div>
+        <div id="unity-build-title">terminal</div>
       </div>
     </div>
     <script>
@@ -56,14 +56,14 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/testpagenewest.loader.js";
+      var loaderUrl = buildUrl + "/Terminal-DEMO.loader.js";
       var config = {
-        dataUrl: buildUrl + "/testpagenewest.data",
-        frameworkUrl: buildUrl + "/testpagenewest.framework.js",
-        codeUrl: buildUrl + "/testpagenewest.wasm",
+        dataUrl: buildUrl + "/Terminal-DEMO.data",
+        frameworkUrl: buildUrl + "/Terminal-DEMO.framework.js",
+        codeUrl: buildUrl + "/Terminal-DEMO.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "Home Page",
+        productName: "terminal",
         productVersion: "0.1",
         showBanner: unityShowBanner,
       };
